# CPPX

./: .clangd  .gitignore  CMakeLists.txt  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  Doxyfile.in  LICENSE  README.md  README_8md.html  SECURITY.md  SECURITY_8md.html  annotated.html  annotated_dup.js  avl_8tpp.html  avl_8tpp_source.html  benchmark__main_8cpp.html  benchmark__main_8cpp.js  benchmark__main_8cpp__incl.map  benchmark__main_8cpp__incl.md5  benchmark__main_8cpp_source.html  binary__tree_8tpp.html  binary__tree_8tpp_source.html  bst_8tpp.html  bst_8tpp_source.html  classBenchmark-members.html  classBenchmark.html  classBenchmark.js  classBenchmark__coll__graph.map  classBenchmark__coll__graph.md5  classes.html  classstl__ext_1_1AVLTree-members.html  classstl__ext_1_1AVLTree.html  classstl__ext_1_1AVLTree.js  classstl__ext_1_1AVLTree__coll__graph.map  classstl__ext_1_1AVLTree__coll__graph.md5  classstl__ext_1_1BST-members.html  classstl__ext_1_1BST.html  classstl__ext_1_1BST.js  classstl__ext_1_1BST__coll__graph.map  (+97 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cmake.yml  doxygen.yml
benchmarks/: benchmark_main.cpp
debian/: changelog  control  copyright  rules
debian/source/: options
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  benchmark_results.csv  custom.css  footer.html  header_setup.js  mainpage.md
examples/: example.cpp
include/: binaryTree-guide.md  cppx.h  header.h  trim.h
include/libraries/: hello.h
scripts/: ppa-upload.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  (+39 more)
src/: avl.tpp  avl_tree.tpp  binarySearchTree.cpp  binaryTree.cpp  binary_tree.cpp  binary_tree.tpp  bst.cpp  bst.tpp  hello.cpp  mylib.cpp  node.cpp  node.tpp  node_pool.tpp  rbt.tpp  trim.cpp
test_suite/: avl_test_cases.cpp  binary_tree_test_cases.cpp  bst_test_cases.cpp  main.cpp  node_test_cases.cpp  rbt_test_cases.cpp  visualization_test_cases.cpp
